# modular-decomposition

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yaml
algorithms/: jsc72.py
algorithms/fracture/: Cargo.toml  README.md
algorithms/fracture/src/: base.rs  lib.rs
algorithms/kar19-rs/: Cargo.toml
algorithms/kar19-rs/src/: base.rs  basic.rs  factorizing_permutation.rs  improved.rs  lib.rs  shared.rs
algorithms/linear/: Cargo.toml  README.md
algorithms/linear-ref/: Cargo.toml  README.md
algorithms/linear-ref/src/: lib.rs
algorithms/linear/src/: graph.rs  lib.rs
algorithms/linear/src/compute/: misc.rs  pivot.rs  promotion.rs
algorithms/lyt15/: Cargo.toml
algorithms/lyt15-cpp-wrapper/src/: lib.rs
algorithms/lyt15/src/: lib.rs
algorithms/miz23-md-cpp/: Cargo.toml
algorithms/miz23-md-cpp-sys/: Cargo.toml  build.rs  init.sh  patch-1.patch
algorithms/miz23-md-cpp-sys/src/: .gitignore  ffi.cpp  lib.rs
algorithms/miz23-md-cpp/src/: io.rs  lib.rs  main.rs
algorithms/miz23-md-rs/: Cargo.toml  README.md
algorithms/miz23-md-rs/src/: forest.rs  graph.rs  lib.rs  main.rs  mdtree.rs  set.rs
algorithms/miz23-md-rs/src/compute/: assembly.rs  misc.rs  mod.rs  pivot.rs  promotion.rs  refinement.rs
algorithms/miz23-sys/: Cargo.toml  build.rs
algorithms/miz23-sys/src/: ffi.cpp
algorithms/ms00/: Cargo.toml
algorithms/ms00/notebooks/: MS00 Example.ipynb
algorithms/ms00/src/: algos.rs  graph.rs  lib.rs  ordered_vertex_partition.rs  partition.rs  testing.rs
algorithms/ms00/src/linked_list/: graph.rs  mod.rs  partition.rs
algorithms/ms00/src/seq/: algos.rs  graph.rs  mod.rs  ordered_vertex_partition.rs  partition.rs  testing.rs
algorithms/skeleton/: Cargo.toml  README.md
algorithms/skeleton/src/: lib.rs  ordered_vertex_partition.rs  partition.rs
common/: Cargo.toml
common/src/: index.rs  instances.rs  io.rs  lib.rs  linked_list.rs  modular_decomposition.rs  set.rs
crates/common/: Cargo.toml
crates/common/src/: index.rs  instances.rs  lib.rs  modular_decomposition.rs
crates/common/src/io/: edge_list.rs  md_tree_adj.rs  metis.rs  mod.rs  pace2023.rs
crates/evaluation/: .gitignore  Cargo.toml  Evaluation.ipynb  README.md
crates/evaluation/scripts/: analyze.py  combine_data.py  generate.py  pipeline.py
crates/evaluation/scripts/data/: create_dirs.sh  download_girg.sh
crates/evaluation/src/: canonicalize.rs  main.rs
crates/fracture/: Cargo.toml
crates/fracture/src/: base.rs  lib.rs
crates/linear/: Cargo.toml  README.md
crates/linear-ref/: Cargo.toml
crates/linear-ref-sys/: Cargo.toml  build.rs
crates/linear-ref-sys/src/: lib.rs
crates/linear-ref/src/: lib.rs
crates/linear/src/: forest.rs  graph.rs  lib.rs  set.rs
crates/linear/src/compute/: assembly.rs  misc.rs  mod.rs  pivot.rs  promotion.rs  refinement.rs
crates/modular-decomposition/: CHANGELOG.md  Cargo.toml  README.md
crates/modular-decomposition/examples/: adj_vector_graph.rs
crates/modular-decomposition/src/: deque.rs  index.rs  lib.rs  md_tree.rs  segmented_stack.rs  tests.rs
crates/modular-decomposition/src/fracture/: factorizing_permutation.rs  mod.rs
crates/modular-decomposition/src/md_tree/: functions.rs  mod.rs
crates/playground/: Cargo.toml  jsc72.py
crates/playground/src/: factorizing_permutation.rs  lexbfs.rs  lib.rs  list.rs  main.rs  modular_functions.rs  modular_partition.rs  partition_refinement.rs  splitters.rs
crates/skeleton/: Cargo.toml
crates/skeleton/src/: algos.rs  graph.rs  lib.rs  ordered_vertex_partition.rs  partition.rs  testing.rs
data/: .gitignore
data/03-graph-stats/: pace2023-exact.csv  pace2023-heuristic.csv
data/06-md-tree-stats/: pace2023-exact.csv
docker/: Dockerfile  build.sh
docker/scripts/: enter.sh  kill.sh  load.sh  run.sh
evaluation/: Cargo.toml  requirements.txt
evaluation/benches/: benchmark.rs
evaluation/scripts/: pipeline.py  plot.py  util.py
evaluation/src/: main.rs
hippodrome/: .gitignore  Cargo.toml  README.md
hippodrome/benches/: benchmark.rs
hippodrome/src/: canonicalize.rs  main.rs
notes/: Evaluation.ipynb  hm79.py  jsc72.py
notes/habib_and_paul_2009_graph/: G.dot  G_with_md.dot  G_with_md_reduced.dot  README.md  md.dot  md_detailed.dot
notes/hp10/: A survey of the algorithmic aspects of modular decomposition - M. Habib and C. Paul, 2010.ipynb  README.md
notes/miz23-viz/: 00-graph.eps  00-mdt.eps  out.txt  trace-tree.ipynb
notes/ms89/: ms89  ms89-figure2.dot  ms89-md.dot  ms89.dot
playground/: Cargo.toml
playground/src/: factorizing_permutation.rs  lexbfs.rs  lib.rs  list.rs  main.rs  modular_functions.rs  modular_partition.rs  partition_refinement.rs  splitters.rs  standard_partition_data_structure.rs
scripts/: analyze.py  generate.py  pipeline.py  util.py
scripts/data/: download_girg_deg_scaling.sh  download_pace2023.sh  download_real.sh
