[workspace]
members = [
    "algorithms/fracture",
    "algorithms/skeleton",
    "algorithms/linear-ref",
    "algorithms/linear",
    "algorithms/miz23-sys",
#    "algorithms/dgm01",
#    "algorithms/jsc72",
#    "algorithms/kar19-jl",
#    "algorithms/lyt15-rs",
    "algorithms/lyt15",
    "common",
    "hippodrome",
    "playground",
]
resolver="2"

[workspace.dependencies]
clap = { version = "4.4.7", features = ["derive"] }
petgraph = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["json"] }
