[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fracture = { path = "../algorithms/fracture" }
skeleton = { path = "../algorithms/skeleton" }
linear-ref = { path = "../algorithms/linear-ref" }
linear = { path = "../algorithms/linear" }
common =  { path = "../common" }
clap.workspace = true
petgraph.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
