[package]
name = "hippodrome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kar19-rs = { path = "../algorithms/kar19-rs" }
lyt15-cpp-wrapper = { path = "../algorithms/lyt15-cpp-wrapper" }
miz23-md-cpp = { path = "../algorithms/miz23-md-cpp" }
miz23-md-rs = { path = "../algorithms/miz23-md-rs" }
ms00 = { path = "../algorithms/ms00" }
common =  { path = "../common" }
clap.workspace = true
petgraph.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
