[package]
name = "modular-decomposition"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["science", "algorithms"]
keywords = ["graph", "modular", "decomposition"]

[dependencies]
petgraph.workspace = true
tracing.workspace = true
